Update style sheet

--- a/recipes/gnochi.html
+++ b/recipes/gnochi.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Gnochi</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -14,13 +15,13 @@
              family has used for generations.</p>
         <img src="../img/gnochi.webp" height="300" alt="A delicious gnochi">
         <h2>Ingridients</h2>
-        <ul>
+        <ul class="ingridients">
             <li>2 potatoes, peeled</li>
             <li>2 cups all-purpose flour</li>
             <li>1 large egg</li>
         </ul>
         <h2>How to prepare</h2>
-        <ol>
+        <ol class="prepare">
             <li>Bring a large pot of salted water to a boil; 
                 add potatoes and cook until tender but still firm,
                  about 15 minutes. Drain, cool, and mash with a
