--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,17 +4,18 @@
 
     <head>
         <meta charset="utf-8">
-        <title>lasagna</title>
+        <title>Lasagna</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>lasagna</h1>
+        <h1>Lasagna</h1>
         <p>An easy lasagna recipe that saves me lots of time. 
             This dish satisfies everyone in the family. 
             Try it tonight!</p>
         <img src="../img/lasagna.webp" height="300" alt="A delicious lasagna">
         <h2>Ingridients</h2>
-        <ul>
+        <ul class="ingridients">
             <li>1 pound lean ground beef</li>
             <li>1 (32 ounce) jar spaghetti sauce</li>
             <li>32 ounces cottage cheese</li>
@@ -28,7 +29,7 @@
             <li>½ cup water</li>
         </ul>
         <h2>How to prepare</h2>
-        <ol>
+        <ol class="prepare">
             <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
             <li>Heat a large skillet over medium-high heat. 
                 Cook and stir ground beef in the hot skillet 
