--- a/recipes/raviolli.html
+++ b/recipes/raviolli.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Raviolli</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -13,7 +14,7 @@
             Just found her old recipe book with it in it.</p>
         <img src="../img/raviolli.webp" height="300" alt="A delicious raviolli">
         <h2>Ingridients</h2>
-        <ul>
+        <ul class="ingridients">
             <li>1 pound ground beef</li>
             <li>1 ½ cups fresh spinach</li>
             <li>5 tablespoons grated Parmesan cheese</li>
@@ -25,7 +26,7 @@
             <li>1 pinch black pepper</li>
         </ul>
         <h2>How to prepare</h2>
-        <ol>
+        <ol class="prepare">
             <li>Heat a large skillet over medium-high heat and 
                 stir in the ground beef. Cook and stir until 
                 the beef is crumbly, evenly browned, and no 
