--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Italian Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
